fixed nav on safari

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,14 +133,12 @@ article.hero {
   }
   section.top {
     position: absolute;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
     top: 0;
-    right: 0;
     width: 100%;
+    right: 0;
     z-index: 10;
     padding: 2rem;
+    text-align: right;
     a {
       position: relative;
       top: -.5rem;
